<resources>

    <string name="app_name">Jobowakee</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Generic Form Strings -->
    <string name="submit_button">Submit</string>

    <!-- Login Strings -->
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="forgot_password_link_text">I can\'t remember my password!</string>
    <string name="login_submit_button">Login</string>
    <string name="register_button">New User</string>

    <!-- Registration Strings -->
    <string name="register_email_hint">email</string>
    <string name="register_username_hint">username</string>
    <string name="register_password_hint">password</string>
    <string name="register_password_conf_hint">confirm password</string>
    <string name="register_submit_button">Register</string>
    <string name="login_button">Sign In</string>

    <!-- Employer Profile Strings -->
    <string name="employer_form_title">Welcome username</string>
    <string name="employer_form_personal_info">Please fill out your personal information</string>
    <string name="employer_email_hint">email</string>
    <string name="employer_first_name_hint">first name</string>
    <string name="employer_last_name_hint">last name</string>
    <string name="employer_form_company_info">Please fill out your company information</string>
    <string name="employer_company_name_hint">company name</string>
    <string name="employer_company_address_hint">company address</string>
    <string name="employer_company_phone_hint">company phone</string>

</resources>
