<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="21dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/length_tiny"
            android:textSize="@dimen/font_headline"
            android:text="@string/app_name"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email_hint"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_username_hint"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/register_password_hint"/>

        <EditText
            android:id="@+id/register_password_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/register_password_conf_hint"/>

        <LinearLayout
            android:id="@+id/form_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/length_small">

            <Button
                android:id="@+id/register_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/length_small"
                android:text="@string/register_submit_button"
                android:textColor="@color/light"
                android:background="@color/accent"/>

            <Button
                android:id="@+id/to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/length_small"
                android:paddingRight="@dimen/length_medium"
                android:paddingBottom="@dimen/length_small"
                android:paddingLeft="@dimen/length_medium"
                android:text="@string/login_button"
                android:textColor="@color/light"
                android:background="@color/dark_primary"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>