<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="21dp"
        android:gravity="center_vertical"
        android:backgroundTint="@color/dark"
        android:backgroundTintMode="multiply">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/length_medium"
            android:textSize="@dimen/font_headline"
            android:text="@string/app_name"
            android:textColor="@color/dark_primary"/>

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/length_small"
            android:hint="@string/login_username_hint"
            android:textColor="@color/dark_primary"
            android:textColorHint="@color/dark_primary"
            android:background="@drawable/input_border_bottom"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/length_small"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:textColor="@color/dark_primary"
            android:textColorHint="@color/dark_primary"
            android:background="@drawable/input_border_bottom"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/length_small"
            android:layout_marginBottom="@dimen/length_small"
            android:onClick="onClick"
            android:clickable="true"
            android:textColor="@color/dark_primary"
            android:textColorHighlight="@color/accent"
            android:text="@string/forgot_password_link_text" />

        <LinearLayout
            android:id="@+id/form_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/length_small">

            <Button
                android:id="@+id/login_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/length_small"
                android:text="@string/login_submit_button"
                android:textColor="@color/light"
                android:background="@color/accent"/>

            <Button
                android:id="@+id/to_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/length_small"
                android:paddingRight="@dimen/length_medium"
                android:paddingBottom="@dimen/length_small"
                android:paddingLeft="@dimen/length_medium"
                android:text="@string/register_button"
                android:textColor="@color/light"
                android:background="@color/dark_primary"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>